@@ -7,6 +7,6 @@ pause
 pyinstaller dw.spec -y --clean
 "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "./dw-piper.iss" /DAppVersion=%version%
 echo Compiled version %version%
-( echo ^> Changelog ^(%date%^) & echo ^> Version: %version% & echo. & echo - First change & echo - Another change ) > ./output/%version%/changelog.txt
+( echo ^{ & echo   "date": "%date%", & echo   "version": "%version%", & echo   "changes": [ & echo     "Changes go here" & echo   ] & echo } ) > ./output/%version%/changelog.json
 echo Generated template changelog
 pause
