@@ -1,5 +1,5 @@
 from os import path
-from tkinter import Frame, Label, Button, TOP, LEFT
+from tkinter import Frame, Label, Button, Scrollbar, Listbox, TOP, BOTTOM, LEFT, RIGHT, Y, X, END, HORIZONTAL, FLAT
 
 import win32api
 
@@ -8,7 +8,7 @@ from src.variables import Env
 
 class UpdatePrompt:
 
-  def __init__(self, tk_overlay, latest_version, download_version):
+  def __init__(self, tk_overlay, latest_version, changelog, download_version):
 
     print("Update Prompt > Started")
 
@@ -27,10 +27,11 @@ class UpdatePrompt:
 
     self.root.bind("<Key>", self.key_press)
 
-    width, height = self.root.winfo_width(), self.root.winfo_height()
+    width, height = 450, 400
     monitor_info = win32api.GetMonitorInfo(win32api.MonitorFromPoint((0,0)))
     work_area = monitor_info["Work"]
 
+    self.root.minsize(width, height)
     self.root.geometry('%dx%d+%d+%d' % (width, height, work_area[2] - (width + 13), work_area[3] - (height + 36)))
 
     self.version_label = Label(
@@ -40,7 +41,46 @@ class UpdatePrompt:
       bg="#212121",
       fg="white"
     )
-    self.version_label.pack(side=TOP, pady=(0, 5))
+    self.version_label.pack(side=TOP)
+
+    self.date_label = Label(
+      self.front_frame,
+      text=changelog["date"],
+      font=("Courier", 8),
+      bg="#212121",
+      fg="white"
+    )
+    self.date_label.pack(side=TOP, pady=(0, 10))
+
+    self.changelog_frame = Frame(
+      self.front_frame,
+      bg="#212121"
+    )
+    self.changelog_frame.pack(side=TOP, pady=(0, 5))
+
+    self.changelog_scrollbar_x = Scrollbar(self.changelog_frame, orient=HORIZONTAL)
+    self.changelog_scrollbar_x.pack(side=BOTTOM, fill=X)
+    self.changelog_scrollbar_y = Scrollbar(self.changelog_frame)
+    self.changelog_scrollbar_y.pack(side=RIGHT, fill=Y)
+
+    self.changelog_listbox = Listbox(
+      self.changelog_frame,
+      font=("Courier", 8),
+      bg="#212121",
+      fg="white",
+      width=50,
+      height=8,
+      xscrollcommand=self.changelog_scrollbar_x.set,
+      yscrollcommand=self.changelog_scrollbar_y.set,
+      relief=FLAT
+    )
+    self.changelog_listbox.pack(side=TOP)
+
+    self.changelog_scrollbar_x.config(command=self.changelog_listbox.xview)
+    self.changelog_scrollbar_y.config(command=self.changelog_listbox.yview)
+
+    for change in changelog["changes"]:
+      self.changelog_listbox.insert(END, f"{change}\n")
 
     self.button_label = Label(
       self.front_frame,
