@@ -27,3 +27,4 @@
 1.3.1:
 - Added start menu option to launch background
 - Added alternative hotkey 'CTRL + ALT + D'
+- Added changelog support for new releases
